# Speak-the-Meaning-of-Word

./: README.md  pyproject.toml  requirements.txt
src/speak_meaning/: __init__.py  dictionary.py  gui.py  main.py  tts.py
tests/: test_dictionary.py
